# rswasm

./: Cargo.toml  build.rs  build.sh  rust_wasm_guest.wasm
src/: lib.rs
src/protos/: abi.proto
